--- a/projectname/projectname/templates/index.html
+++ b/projectname/projectname/templates/index.html
@@ -119,7 +119,7 @@
          <!-- Try Section -->
          <section class="bg-primary mb-0" id="try">
             <div class="container">
-              <h2 class="text-center text-white">Try My App!</h2>
+              <h2 class="text-center text-white">Try My App! Enter a company ID below (e.g. 10)</h2>
               <hr class="star-light mb-5">
                     <div class="col-sm m-3 text-center">
                           <form action="/output" method="GET" id="user_input">
@@ -138,7 +138,7 @@
             {% elif my_form_result=='NotEmpty' %}     
       
             <div class="row mt-4 justify-content-center">
-                  <h4 class="text-light text-center text-uppercase">Check out the forecast for your biotech company!</h4>
+                  <h4 class="text-light text-center text-uppercase">The forecast for your biotech company is ready!</h4>
             </div>
             <div class="row p-1 m-1 justify-content-center">
                   <div class="col-md- w-50 list-group">
@@ -153,7 +153,7 @@
                         </ul>
                   </div>
                   <div class="col">
-                  <img src="{{ url_for('static', filename = my_img_name) }}" width=500 height=416>
+                  <img src="{{ url_for('static', filename = my_img_name) }}" width=0 height=0>
                   </div>      
             </div>
       
@@ -311,8 +311,8 @@
                                         <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                                         <div class="divider-custom-line"></div>
                                     </div>
-                                    <!-- Portfolio Modal - Image--><img class="img-fluid rounded mb-5" src="/static/assets/img/portfolio/confusion_matrix.png" alt="" /><!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                    <!-- Portfolio Modal - Image--><img class="img-fluid rounded mb-5" src="/static/assets/img/portfolio/confusion_matrix1.png" alt="" /><!-- Portfolio Modal - Text-->
+                                    <p class="mb-5">{{my_prediction}} </p>
                                     <button class="btn btn-primary" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close Window</button>
                                 </div>
                             </div>
