--- a/projectname/application/templates/index.html
+++ b/projectname/application/templates/index.html
@@ -108,8 +108,7 @@
          <!-- Try Section -->
          <section class="bg-primary mb-0" id="try">
             <div class="container">
-              <h2 class="text-center text-white">Try My App! Enter a company ID below (e.g. 10)</h2>
-              <hr class="star-light mb-5">
+              <h3 class="text-center text-white mt-5 pt-5">Option1. Try My App! Enter a company ID below (e.g. 1)</h3>
                     <div class="col-sm m-3 text-center">
                           <form action="/output" method="GET" id="user_input">
                                 <input class="form-control" type="text" id="user_input" name='user_input' placeholder="e.g. blablabla">
@@ -119,47 +118,43 @@
                    <button type="submit" class="btn btn-secondary btn-lg" form="user_input">Go!</button>
             </div>
 
-            <div class="container">
-                <hr class="star-light mt-10">
-                <h2 class="text-center text-white">Enter company information here for customized forecasting!</h2>
-                <hr class="star-light mb-5">
-                
+            <div class="container border-0">
+                <h3 class="text-center text-white mt-5">Option2. Enter company information here for customized forecast!</h3>                
                 <div class="form-group">
-                    
                     <form action="/customize" method="post">
-                        <div class="row">
-                            <div class="col mt-3 mb-3">
+                        <div class="row">   
+                            <div class="col-md-6 col-lg-4 col-xl-3 mt-3 mb-3">
                                 <input type="text" name="company_name" placeholder='Company name'></input>
                             </div>
-                            <div class="col mt-3 mb-3">
+                            <div class="col-md-6 col-lg-4 col-xl-3 mt-3 mb-3">
                                 <input type="text" name="investment_rounds" placeholder="Investment rounds"></input>
                             </div>
-                            <div class="col mt-3 mb-3">
+                            <div class="col-md-6 col-lg-4 col-xl-3 mt-3 mb-3">
                                 <input type="text" name="funding_rounds" placeholder="Funding rounds"></input>
                             </div>
-                            <div class="col mt-3 mb-3">
+                            <div class="col-md-6 col-lg-4 col-xl-3 mt-3 mb-3">
                                 <input type="text" name="year_founded" placeholder="Founded Year"></input>
                             </div>
                         </div>
 
                         <div class="row">
-                            <div class="col mt-3 mb-3">
+                            <div class="col-md-6 col-lg-4 col-xl-3 mt-3 mb-3">
                                 <input type="text" name="last_funding_year" placeholder="Last Funding Year"></input>
                             </div>
-                            <div class="col mt-3 mb-3">
+                            <div class="col-md-6 col-lg-4 col-xl-3 mt-3 mb-3">
                                 <input type="text" name="funding_total_usd" placeholder="Total Funding USD"></input>
                             </div>
-                            <div class="col mt-3 mb-3">
+                            <div class="col-md-6 col-lg-4 col-xl-3 mt-3 mb-3">
                                 <input type="text" name="milestone" placeholder="Milestone"></input>
                             </div>
-                            <div class="col mt-3 mb-3">
+                            <div class="col-md-6 col-lg-4 col-xl-3 mt-3 mb-3">
                                 <input type="text" name="relationship" placeholder="Relationship"></input>
 
                             </div>
                         </div>
           
                     <div class="row">
-                        <div class="col-4">
+                        <div class="col-md-6 col-lg-4 col-xl-3 mt-3 mb-3">
                           <select class="mdb-select colorful-select dropdown-primary md-form" name="funding_types" id = "funding_types" multiple>
                             <option value="" disabled selected>Choose funding type</option>
                             <option value="Series a">Series a</option>
@@ -184,7 +179,7 @@
                             <option value="Unattributed">Unattributed</option>
                           </select>
                         </div>
-                        <div class= "col-6">
+                        <div class= "col-md-6 col-lg-8 col-xl-9 mt-3 mb-3">
                             <input class="form-control mt-3 mb-3" type="text" name='company_profile' placeholder="Enter Company Profile">
                         </div>
                     </div>       
@@ -245,50 +240,27 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Contact Section Form-->
-                <div class="row">
-                    <div class="col-lg-8 mx-auto">
-                        <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19.-->
-                        <form id="contactForm" name="sentMessage" novalidate="novalidate">
-                            <div class="control-group">
-                                <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                                    <label>Name</label><input class="form-control" id="name" type="text" placeholder="Name" required="required" data-validation-required-message="Please enter your name." />
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                            </div>
-                            <div class="control-group">
-                                <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                                    <label>Email Address</label><input class="form-control" id="email" type="email" placeholder="Email Address" required="required" data-validation-required-message="Please enter your email address." />
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                            </div>
-                            <div class="control-group">
-                                <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                                    <label>Phone Number</label><input class="form-control" id="phone" type="tel" placeholder="Phone Number" required="required" data-validation-required-message="Please enter your phone number." />
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                            </div>
-                            <div class="control-group">
-                                <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                                    <label>Message</label><textarea class="form-control" id="message" rows="5" placeholder="Message" required="required" data-validation-required-message="Please enter a message."></textarea>
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                            </div>
-                            <br />
-                            <div id="success"></div>
-                            <div class="form-group"><button class="btn btn-primary btn-xl" id="sendMessageButton" type="submit">Send</button></div>
-                        </form>
+                <div class="max-auto">
+                    <div class="row">
+                        <div class="col-md-6 col-lg-4 col-xl-4"><i class="fas fa-map-marker-alt mt-4 fa-2x"></i><p>Toronto, ON, Canada</p></div>
+                        <div class="col-md-6 col-lg-4 col-xl-4"><i class="fas fa-phone mt-4 fa-2x"></i><p>1 (647) 534 7948</p></div>
+                        <div class="col-md-6 col-lg-4 col-xl-4"><i class="fas fa-envelope mt-4 fa-2x"></i><p>yanruoyu2005@gmail.com</p></div>
                     </div>
                 </div>
             </div>
         </section>
+    </div>
+
+</section>
+<!--Section: Contact v.2-->
         <!-- Footer-->
         <footer class="footer text-center">
             <div class="container">
                 <div class="row">                    
                     <!-- Footer Social Icons-->
                     <div class="col-lg-12 mb-5 mb-lg-0">
-                        <h4 class="text-uppercase mb-4">Around the Web</h4>
-                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-facebook-f"></i></a><a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-twitter"></i></a><a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-linkedin-in"></i></a><a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-dribbble"></i></a>
+                
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/ruoyu-yan/"><i class="fab fa-fw fa-linkedin-in"></i></a><a class="btn btn-outline-light btn-social mx-1" href="https://github.com/yanruoyu2005"><i class="fab fa-fw  fa-github"></i></a>
                     </div>
                     
                 </div>
@@ -353,7 +325,7 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image--><img class="img-fluid rounded mb-5" src="/static/assets/img/portfolio/{{my_classification_pic}}.png" alt="" /><!-- Portfolio Modal - Text-->
-                                    <a href="/static/assets/img/portfolio/confusion_matrix1.png"><p class="mb-5">{{my_prediction}}. Click here to see the prediction performance of more companies.</p>
+                                    <a href="/static/assets/img/portfolio/confusion_matrix1.png"><p>{{my_prediction}}</p>
                     
                                     <button class="btn btn-primary" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close Window</button>
                                 </div>
@@ -446,7 +418,7 @@
                                         <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                                         <div class="divider-custom-line"></div>
                                     </div>
-                                    <!-- Portfolio Modal - Image--><img class="img-fluid rounded mb-5" src="/static/assets/img/portfolio/safe.png" alt="" /><!-- Portfolio Modal - Text-->
+                                    <!-- Portfolio Modal - Image--><img class="img-fluid rounded mb-5" src="" alt="" /><!-- Portfolio Modal - Text-->
                                     <p class="mb-5">We are currently developing this feature to show you the latest trend in the biotech industry.</p>
                                     <button class="btn btn-primary" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close Window</button>
                                 </div>
@@ -475,7 +447,7 @@
                                         <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                                         <div class="divider-custom-line"></div>
                                     </div>
-                                    <!-- Portfolio Modal - Image--><img class="img-fluid rounded mb-5" src="/static/assets/img/portfolio/submarine.png" alt="" /><!-- Portfolio Modal - Text-->
+                                    <!-- Portfolio Modal - Image--><img class="img-fluid rounded mb-5" src="" alt="" /><!-- Portfolio Modal - Text-->
                                     <p class="mb-5">We are currently developing a database to track real-time information of latest biotech startups.</p>
                                     <button class="btn btn-primary" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close Window</button>
                                 </div>
